# Members

./: .env.example  README.md  db.sqlite-3  db.sqlite-test-3  pyproject.toml  requirements.txt
apps/company/: admin.py  models.py
apps/company/migrations/: 0001_initial.py
apps/members/: admin.py  apps.py  export.py  filters.py  models.py  resources.py  signals.py  urls.py  views.py
apps/members/migrations/: 0001_initial.py  0002_alter_member_membership_number.py  0002_member_company.py  0003_course.py  0003_remove_member_state.py  0004_company.py  0004_course_created_at_course_updated_at_subscription.py  0005_delete_subscription.py  0005_member_company.py  0006_subscription.py  0007_remove_subscription_date_subscribed.py  0007_subscription_active_subscription_subscription_number.py  0008_company_created_at_company_updated_at_and_more.py  0008_subscription_is_online.py  0009_course.py  0009_course_is_online.py  0010_subscription_course.py  0011_member_courses.py  0012_member_user.py  0013_alter_member_user_alter_subscription_course.py  0014_remove_member_company_delete_company.py  0015_member_company.py  (+3 more)
apps/pages/: urls.py  views.py
apps/users/: admin.py  backends.py  choices.py  forms.py  models.py  urls.py  views.py
config/: settings.py  urls.py
static/css/: login.css  members-table.css  nav-bar-stylesheet.css
static/js/: filter-active.js  sort-table.js
templates/: _base.html  home.html  member_form.html
templates/app/: export.html  member.html  member_new.html  subscription.html
templates/partials/: _navbar.html  _sidebar.html
templates/users/: login.html
(+7 files in other folders)
