[tool.poetry]
name = "members"
version = "0.1.0"
description = "Members management"
authors = ["Konstantinos Vitiniotis <kostasvit@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
django-environ = "^0.11.2"
django-filter = "^24.2"
django-widget-tweaks = "^1.5.0"
django-import-export = "^4.0.8"
django-crispy-forms = "^2.2"
crispy-tailwind = "^1.0.3"
crispy-bootstrap5 = "^2024.2"
dj-database-url = "^2.2.0"
gunicorn = "^22.0.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
